--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,20 @@
+body {
+    color: white;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
 #index-video {
     position: fixed;
     right: 0;
@@ -11,11 +28,21 @@
     position: relative;
     z-index: 1;
     text-align: center;
-    color: white;
     font-size: 30px;
 }
 
 button {
     font-size: 20px;
     padding: 15px 25px;
+}
+
+#intro {
+    position: relative;
+    z-index: 1;
+    background-color: rgba(255, 0, 0, .5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
 }
