location page tall images are working

--- a/css/location.css
+++ b/css/location.css
@@ -35,6 +35,9 @@ body {
 #right-bottom-left {
     grid-column-start: 1;
 }
+#right-bottom-left img {
+    height: 100%;
+}
 #right-bottom-right {
     grid-column-start: 2;
     display: grid;
