--- a/css/index.css
+++ b/css/index.css
@@ -36,13 +36,16 @@ button {
     padding: 15px 25px;
 }
 
-#intro {
+#intro-container {
     position: relative;
     z-index: 1;
-    background-color: rgba(255, 0, 0, .5);
+    background-color: rgba(255, 255, 255, 0.5);
+    color:black;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 75%;
+    padding: 10px;
+    text-align: center;
 }
