--- a/css/location.css
+++ b/css/location.css
@@ -77,6 +77,9 @@ body {
 #game-right {
     grid-column-start: 2
 }
+#game-right img {
+    height: 100%;
+}
 #game-left {
     grid-column-start: 1
 }
