--- a/css/index.css
+++ b/css/index.css
@@ -50,7 +50,8 @@ button:hover {
 #intro {
     position: relative;
     z-index: 1;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.783);
+    font-family: 'Inconsolata', monospace;
     color:black;
     display: flex;
     flex-direction: column;
@@ -60,5 +61,13 @@ button:hover {
     padding: 10px;
     text-align: center;
     margin: 0px auto;
+}
+
+#intro img {
+    width: 100px;
+}
+
+#intro button {
+    margin: 10px 0px;
 }
 
