--- a/css/map.css
+++ b/css/map.css
@@ -1,11 +1,13 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
 body {
     min-width: 100vw;
     min-height: 100vh;
-
     display: grid;
     grid-template-columns: 20% 80%;
-    grid-template-rows: 2% 98%;
-
+    grid-template-rows: .001% 99%;
     color: white;
 }
 
@@ -37,6 +39,9 @@ body {
 #nav-bar a {
     margin-left: 20px;
     margin-right: 40px;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
     color: white;
 }
 #map-header {
@@ -50,6 +55,11 @@ body {
 h1 {
     margin: 0;
     color: red;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    font-size: 72px;
+    /* letter-spacing: 4px; */
+
 }
 #map-header p {
     margin: 0;
@@ -67,6 +77,7 @@ h1 {
     align-items: flex-start;
 }
 #prompt p {
+    font-family: 'Inconsolata', monospace;
     font-size: 25px;
     margin-top: 0;
     margin-bottom: 0;
@@ -121,16 +132,21 @@ h1 {
 #left {
     grid-column-start: 1;
     grid-row-start: 2;
-
     display: grid;
     grid-template-rows: 40% 60%; 
     background-color: rgb(0, 0, 0);
+    font-family: 'Inconsolata', monospace;
+    font-size: 22px;
 }
 #avatar-image-container {
     grid-row-start: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#avatar-image-container img {
+    width: 200px;
 }
 #status-bar-container {
     grid-row-start: 2;
@@ -140,4 +156,12 @@ h1 {
 }
 #user-info {
     grid-column-start: 2;
+}
+
+#user-info p {
+    line-height: 1.7;
+}
+
+#user-info li {
+    margin-left: 20px;
 }
