--- a/css/location.css
+++ b/css/location.css
@@ -1,10 +1,16 @@
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
 body {
     min-width: 100vw;
     min-height: 100vh;
-
     display: grid;
     grid-template-columns: 20% 80%;
-    grid-template-rows: 2% 98%;
+    grid-template-rows: .001% 99%;
+    font-family: 'Inconsolata', monospace;
+
 }
 
 
@@ -34,9 +40,12 @@ body {
 }
 #right-bottom-left {
     grid-column-start: 1;
+
 }
 #right-bottom-left img {
-    height: 100%;
+    width: 100%;
+    /* height: 100%; */
+    overflow: hidden;
 }
 #right-bottom-right {
     grid-column-start: 2;
@@ -46,36 +55,55 @@ body {
 #right-bottom-right-top {
     grid-row-start: 1;
     display: grid;
-    grid-template-columns: 15% 60% 25%;
+    grid-template-columns: 40% 60%;
 }
 #location-title {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
     color: red;
-    font-size: 50px;
-    margin-right: 25px;
+    font-size: 42px;
+    line-height: 1.2;
+    margin-right: 15px;
+    margin-top: 20px;
+    border-right: 1px solid red;
+    padding-right: 40px;
+    margin-bottom: 40px;
 }
 #description {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;  
-    margin: 15px;
+    align-items: flex-start;  
+    line-height: 1.3;
+    margin-right: 8px;
+    margin-top: 20px;
+    border-right: 1px solid red;
+    padding-right: 40px;
+    margin-bottom: 40px;
 }
 #instructions {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin: 15px;
+    line-height: 1.3;
 }
 #right-bottom-right-bottom {
     grid-row-start: 2;
-
     display: grid;
     grid-template-columns: 50% 50%;
+    background-image: url('../assets/img/credits-background-1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #game-right {
     grid-column-start: 2
+}
+#game-right img {
+    height: 10px
 }
 #game-right img {
     height: 100%;
@@ -94,19 +122,23 @@ body {
 #left {
     grid-column-start: 1;
     grid-row-start: 2;
-
     display: grid;
     grid-template-rows: 40% 60%; 
     background-color: rgb(0, 0, 0);
+    font-family: 'Inconsolata', monospace;
+    font-size: 22px;
     color: white;
 }
 #avatar-image-container {
-    grid: row start 1;;
+    grid-row-start: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+#avatar-image-container img {
+    width: 200px;
+}
 #status-bar-container {
     grid-row-start: 2;
 
@@ -115,4 +147,12 @@ body {
 }
 #user-info {
     grid-column-start: 2;
+}
+
+#user-info p {
+    line-height: 1.7;
+}
+
+#user-info li {
+    margin-left: 20px;
 }
