--- a/css/location.css
+++ b/css/location.css
@@ -36,16 +36,17 @@ body {
 #right-bottom {
     grid-row-start: 2;
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 20% 80%;
 }
 #right-bottom-left {
     grid-column-start: 1;
-
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: black;
 }
 #right-bottom-left img {
     width: 100%;
-    /* height: 100%; */
-    overflow: hidden;
 }
 #right-bottom-right {
     grid-column-start: 2;
@@ -55,7 +56,7 @@ body {
 #right-bottom-right-top {
     grid-row-start: 1;
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 35% 65%;
 }
 #location-title {
     display: flex;
@@ -66,11 +67,15 @@ body {
     color: red;
     font-size: 42px;
     line-height: 1.2;
-    margin-right: 15px;
-    margin-top: 20px;
+    /* margin-right: 15px; */
+    /* margin-top: 20px; */
     border-right: 1px solid red;
-    padding-right: 40px;
-    margin-bottom: 40px;
+    /* padding-right: 40px; */
+    /* margin-bottom: 40px; */
+}
+#location-title p {
+    margin-top: 15px;
+    margin-left: 8px;
 }
 #description {
     display: flex;
@@ -78,46 +83,69 @@ body {
     justify-content: center;
     align-items: flex-start;  
     line-height: 1.3;
-    margin-right: 8px;
+    /* margin-right: 8px;
     margin-top: 20px;
     border-right: 1px solid red;
     padding-right: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; */
+    font-size: 12px;
 }
-#instructions {
+#description p {
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+#description a {
+    margin-left: auto;
+    margin-right: auto;
+}
+/* #instructions {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     margin: 15px;
     line-height: 1.3;
-}
+} */
 #right-bottom-right-bottom {
     grid-row-start: 2;
     display: grid;
     grid-template-columns: 50% 50%;
     background-image: url('../assets/img/credits-background-1.jpg');
-    /* background-size: cover;
-    background-repeat: no-repeat; */
+    background-size: contain;
 }
 #right-bottom-right-bottom img {
-    max-width: 100%;
-    max-height: 100%;
+    /* max-width: 100%;
+    max-height: 100%; */
 }
 #game-right {
-    grid-column-start: 2
+    grid-column-start: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #game-right img {
-    height: 10px
-}
-#game-right img {
-    height: 100%;
+    height: 250px;
 }
 #game-left {
     grid-column-start: 1;
     margin-left: 30px;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-size: 28px;
     line-height: 1.2;
+}
+#guess-input {
+    height: 30px;
+    width: 180px;
+    font-size: 25px;
+}
+#num-input {
+    height: 30px;
+    width: 30px;
+    font-size: 25px;
+}
+
+#croww-word-guess {
+    margin-top: 30px;
 }
 button {
     font-size: 18px;
@@ -156,7 +184,7 @@ button:hover {
 }
 
 #avatar-image-container img {
-    width: 90%;
+    width: 150px;
 }
 #status-bar-container {
     grid-row-start: 2;
