finish location pages and game styling and logic

--- a/css/location.css
+++ b/css/location.css
@@ -209,7 +209,7 @@ button:hover {
 }
 
 #avatar-image-container img {
-    width: 150px;
+    width: 70%;
 }
 #status-bar-container {
     grid-row-start: 2;
